k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-commander
  labels:
    app: comment-commander
spec:
  type: ClusterIP
  selector:
    app: comment-commander
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
